--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -152,8 +152,8 @@
                                     items: [
                                         {
                                             href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/new-journey",
-                                            text: "Add an appearance",
-                                            visuallyHiddenText: "Add an appearance"
+                                            text: "Add appearance",
+                                            visuallyHiddenText: "Add appearance"
                                         }
                                         if courtCaseDetails.overallCaseStatus != "INACTIVE" else
                                         {
