--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -79,62 +79,67 @@
                         }}
 
                         <hr class="govuk-section-break govuk-section-break--visible">
-
-                        {% if courtCaseDetails.latestAppearance %}
-
-                            <div class="govuk-grid-row">
+                        
+                        <div class="govuk-grid-row">
                                 <div class="govuk-grid-column-one-half">
                                     <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Latest appearance</h2>
                                 </div>
                             </div>
-
                             <div class="govuk-grid-row govuk-!-padding-bottom-2 govuk-!-margin-top-2">
-                                <div class="govuk-grid-column-one-third">
-                                    <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Case reference</h3>
-                                    <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceCourtCaseReference-{{courtCaseDetails.courtCaseUuid}}">{{ courtCaseDetails.latestAppearance.courtCaseReference if courtCaseDetails.latestAppearance.courtCaseReference else 'Not entered'}}</p>
-                                    <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Warrant date</h3>
-                                    <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceWarrantDate-{{courtCaseDetails.courtCaseUuid}}">{{ courtCaseDetails.latestAppearance.appearanceDate | formatDate }}</p>
-                                </div>
-                                <div class="govuk-grid-column-two-thirds">
-                                    <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Location</h3>
-                                    <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceLocation-{{courtCaseDetails.courtCaseUuid}}">{{ courtMap[courtCaseDetails.latestAppearance.courtCode] }}</p>
-                                    <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Outcome</h3>
-                                    <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceOutcome-{{courtCaseDetails.courtCaseUuid}}"> {{ courtCaseDetails.latestAppearance.outcome | appearanceOutcomeOrLegacy(courtCaseDetails.latestAppearance.legacyData) }}</p>
-                                </div>
-                                <div class="govuk-grid-column-full govuk-!-margin-top-2">
-                                    {% set offenceDetailsHtml %}
-                                        {% for offence in courtCaseDetails.offences %}
-                                            {{
-                                                offenceCard({
-                                                    offenceCode: offence.offenceCode,
-                                                    offenceName: offenceMap[offence.offenceCode],
-                                                    offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                                                    offenceEndDate: offence.offenceEndDate | formatDate,
-                                                    outcome: offenceOutcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
-                                                    countNumber: offence.sentence.countNumber,
-                                                    convictionDate: offence.sentence.convictionDate | formatDate,
-                                                    terrorRelated: offence.terrorRelated,
-                                                    isSentenced: offence.sentence,
-                                                    custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
-                                                    sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
-                                                    fineAmount: offence.sentence.fineAmount
+                                {% if courtCaseDetails.latestAppearance %}
+
+                                    
+                                        <div class="govuk-grid-column-one-third">
+                                            <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Case reference</h3>
+                                            <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceCourtCaseReference-{{courtCaseDetails.courtCaseUuid}}">{{ courtCaseDetails.latestAppearance.courtCaseReference if courtCaseDetails.latestAppearance.courtCaseReference else 'Not entered'}}</p>
+                                            <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Warrant date</h3>
+                                            <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceWarrantDate-{{courtCaseDetails.courtCaseUuid}}">{{ courtCaseDetails.latestAppearance.appearanceDate | formatDate }}</p>
+                                        </div>
+                                        <div class="govuk-grid-column-two-thirds">
+                                            <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Location</h3>
+                                            <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceLocation-{{courtCaseDetails.courtCaseUuid}}">{{ courtMap[courtCaseDetails.latestAppearance.courtCode] }}</p>
+                                            <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Outcome</h3>
+                                            <p class="govuk-body govuk-!-margin-bottom-2" data-qa="latestAppearanceOutcome-{{courtCaseDetails.courtCaseUuid}}"> {{ courtCaseDetails.latestAppearance.outcome | appearanceOutcomeOrLegacy(courtCaseDetails.latestAppearance.legacyData) }}</p>
+                                        </div>
+                                        <div class="govuk-grid-column-full govuk-!-margin-top-2">
+                                            {% set offenceDetailsHtml %}
+                                                {% for offence in courtCaseDetails.offences %}
+                                                    {{
+                                                        offenceCard({
+                                                            offenceCode: offence.offenceCode,
+                                                            offenceName: offenceMap[offence.offenceCode],
+                                                            offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
+                                                            offenceEndDate: offence.offenceEndDate | formatDate,
+                                                            outcome: offenceOutcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                                                            countNumber: offence.sentence.countNumber,
+                                                            convictionDate: offence.sentence.convictionDate | formatDate,
+                                                            terrorRelated: offence.terrorRelated,
+                                                            isSentenced: offence.sentence,
+                                                            custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
+                                                            sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
+                                                            fineAmount: offence.sentence.fineAmount
+                                                        })
+                                                    }}
+                                                {% endfor %}
+                                            {% endset %}
+
+                                            {{ govukDetails({
+                                                summaryText: "Show offences (" + (courtCaseDetails.showingChargeTotal + " of " if courtCaseDetails.showingChargeTotal else "") + courtCaseDetails.chargeTotal + ")",
+                                                html: offenceDetailsHtml,
+                                                    attributes: {
+                                                        "data-qa": "courtCaseDetailsComponent-" + courtCaseDetails.courtCaseUuid
+                                                    }
                                                 })
                                             }}
-                                        {% endfor %}
-                                    {% endset %}
+                                        </div>
+                                    
+                                {% else %}
+                                    <div class="govuk-grid-column-full govuk-!-margin-top-2">
+                                        <p class="govuk-body govuk-!-margin-bottom-2">No appearances have been entered</p>
+                                    </div>
 
-                                    {{ govukDetails({
-                                        summaryText: "Show offences (" + (courtCaseDetails.showingChargeTotal + " of " if courtCaseDetails.showingChargeTotal else "") + courtCaseDetails.chargeTotal + ")",
-                                        html: offenceDetailsHtml,
-                                            attributes: {
-                                                "data-qa": "courtCaseDetailsComponent-" + courtCaseDetails.courtCaseUuid
-                                            }
-                                        })
-                                    }}
-                                </div>
-                            </div>
-                        {% endif %}
-
+                                {% endif %}
+                        </div>
                         <hr class="govuk-section-break govuk-!-margin-top-4 govuk-section-break--visible">
                         <p class="govuk-body govuk-!-margin-top-6">
                             <a class="govuk-link--no-visited-state govuk-!-font-weight-bold" href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}/details">View and edit all appearances ({{ courtCaseDetails.appearanceTotal }})</a>
