RASS-725 RASS-721 switch to show all period lengths

--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -149,8 +149,7 @@
                             convictionDate: charge.sentence.convictionDate | formatDate,
                             terrorRelated: charge.terrorRelated,
                             isSentenced: charge.sentence,
-                            custodialSentenceLength: charge.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH") | periodLengthToSentenceLength,
-                            licencePeriodLength: charge.sentence.extendedLicensePeriodLength | periodLengthToSentenceLength,
+                            periodLengths: charge.sentence.periodLengths | periodLengthsToSentenceLengths,
                             sentenceServeType: charge.sentence.sentenceServeType,
                             consecutiveTo: charge.sentence.consecutiveToChargeNumber,
                             sentenceType: charge.sentence.sentenceType.description | sentenceTypeValueOrLegacy(charge.sentence.legacyData),
