--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -20,8 +20,7 @@
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
-            custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
-            licencePeriodLength: offence.sentence.licencePeriodLength,
+            periodLengths: offence.sentence.periodLengths,
             sentenceServeType: offence.sentence.sentenceServeType,
             consecutiveTo: offence.sentence.consecutiveTo,
             sentenceType: sentenceType.description if sentenceType,
