--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -75,8 +75,7 @@
                 convictionDate: offence.sentence.convictionDate | formatDate,
                 terrorRelated: offence.terrorRelated,
                 isSentenced: offence.sentence,
-                custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
-                licencePeriodLength: offence.sentence.licencePeriodLength,
+                periodLengths: offence.sentence.periodLengths,
                 sentenceServeType: offence.sentence.sentenceServeType,
                 consecutiveTo: offence.sentence.consecutiveTo,
                 sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
