--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -22,7 +22,7 @@
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
-                        custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
+                        periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         fineAmount: offence.sentence.fineAmount
                     })
