--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -140,7 +140,7 @@
                                                             convictionDate: offence.sentence.convictionDate | formatDate,
                                                             terrorRelated: offence.terrorRelated,
                                                             isSentenced: offence.sentence,
-                                                            custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
+                                                            periodLengths: offence.sentence.periodLengths,
                                                             sentenceServeType: offence.sentence.sentenceServeType,
                                                             consecutiveTo: offence.sentence.consecutiveTo,
                                                             sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
