--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -6,6 +6,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/tag/macro.njk" import govukTag %}
+{%- from "moj/components/pagination/macro.njk" import mojPagination -%}
 
 {% set pageTitle = applicationName + " - Home" %}
 
@@ -215,6 +216,9 @@
                     }}
                 {%  endif %}
             {% endfor %}
+            {% if pagination %}
+                {{ mojPagination(pagination) }}
+            {% endif %}
 
         </div>
 
