RASS-727 allow transfer or out prisoners to be accessed (#578)
* RASS-727 allow transfer or out prisoners to be accessed

* RASS-727 consider inactive booking user role

* use design library for profile banner

--- a/server/views/partials/prisonerBannerLayout.njk
+++ b/server/views/partials/prisonerBannerLayout.njk
@@ -13,7 +13,8 @@
                 dateOfBirth: prisoner.dateOfBirth,
                 status: prisoner.imprisonmentStatusDescription,
                 prisonName: prisoner.prisonName,
-                cellLocation: prisoner.cellLocation
+                cellLocation: prisoner.cellLocation,
+                prisonId: prisoner.prisonId
             } %}
             {{ miniProfile(person, '/api/person/' + prisoner.prisonerNumber + '/image', digitalPrisonServicesUrl + '/prisoner/' + prisoner.prisonerNumber) }}
         {% endblock %}
