--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -121,8 +121,8 @@
 
         <div class="govuk-grid-one-third">
             {% if appearance.warrantType == 'REMAND' %}
-                <h2 class="govuk-heading-s govuk-!-margin-bottom-1"> Next hearing</h3>
-                <p data-qa="next-hearing" class="govuk-body govuk-!-margin-bottom-2">{{ appearance.nextCourtAppearance | formatNextHearing(courtMap) }}</p>
+                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Next hearing</h3>
+                <p class="govuk-body govuk-!-margin-bottom-2" data-qa="next-hearing">{{ appearance.nextCourtAppearance | formatNextHearing(courtMap) }}</p>
             {% endif %}
 
             <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Court documents</h3>
