--- a/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
@@ -11,7 +11,7 @@
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-conviction-date-applied-all{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+            <form method="post">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% set isAddOffences = true %}
                 {% include "../../partials/offenceCaption.njk" %}
@@ -38,10 +38,23 @@
                     errorMessage:  errors | findError('overallConvictionDateAppliedAll')
                 }) }}
 
-                {{ govukButton({
-                    text: "Save and continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                    <button type="submit"
+                            class="govuk-button"
+                            data-module="govuk-button"
+                            data-qa="continue-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-conviction-date-applied-all{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+                        Continue
+                    </button>
+
+                    <button type="submit"
+                            class="govuk-button govuk-button--secondary"
+                            data-module="govuk-button"
+                            data-qa="save-draft-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft?submittedFromUrl={{ req.url }}">
+                        Save as draft
+                    </button>
+                </div>
             </form>
 
         </div>
