--- a/server/views/pages/offence/count-number.njk
+++ b/server/views/pages/offence/count-number.njk
@@ -22,7 +22,7 @@
 {% set pageTitle = applicationName + " - Add a court case Count Number" %}
 
 {% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-count-number{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+            <form method="post">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
                 <h1 class="govuk-heading-l">Is there a count number for this offence?</h1>
@@ -50,10 +50,23 @@
                   }]
                 }) }}
 
-                {{ govukButton({
-                  text: "Save and continue",
-                  attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                    <button type="submit"
+                            class="govuk-button"
+                            data-module="govuk-button"
+                            data-qa="continue-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-count-number{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+                        Continue
+                    </button>
+
+                    <button type="submit"
+                            class="govuk-button govuk-button--secondary"
+                            data-module="govuk-button"
+                            data-qa="save-draft-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft?submittedFromUrl={{ req.url }}">
+                        Save as draft
+                    </button>
+                </div>
             </form>
 
 {% endblock %}
