--- a/server/views/pages/offence/fine-amount.njk
+++ b/server/views/pages/offence/fine-amount.njk
@@ -5,7 +5,7 @@
 {% set pageTitle = applicationName + " - Add the fine amount" %}
 
 {% block pageContent %}
-  <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/fine-amount"?submitToEditOffence=true" if submitToEditOffence }}>
+  <form method="post">
   <input type="hidden" name="_csrf" value="{{ csrfToken }}">
     {% include "../../partials/offenceCaption.njk" %}
     {{ govukInput({
@@ -23,9 +23,22 @@
       spellcheck: false
     }) }}
 
-  {{ govukButton({
-    text: "Continue",
-    attributes: {  'data-qa': 'continue-button' }
-  }) }}
+    <div class="govuk-button-group">
+      <button type="submit"
+              class="govuk-button"
+              data-module="govuk-button"
+              data-qa="continue-button"
+              formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/fine-amount"?submitToEditOffence=true" if submitToEditOffence }}>
+        Continue
+      </button>
+
+      <button type="submit"
+              class="govuk-button govuk-button--secondary"
+              data-module="govuk-button"
+              data-qa="save-draft-button"
+              formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft?submittedFromUrl={{ req.url }}">
+        Save as draft
+      </button>
+    </div>
   </form>
 {% endblock %}
