--- a/server/views/pages/offence/inactive-offence.njk
+++ b/server/views/pages/offence/inactive-offence.njk
@@ -11,7 +11,7 @@
                 <h1 class="govuk-heading-l">
                     You have entered an inactive offence
                 </h1>
-                <p class="govuk-body">The offence <strong>{{ offence.code }} {{ offence.description }}</strong> was made inactive on <strong>{{ offence.endDate | formatDate }}</strong>.</p>
+                <p class="govuk-body">The offence <strong>{{ offence.code }} - {{ offence.description }}</strong> was made inactive on <strong>{{ offence.endDate | formatDate }}</strong>.</p>
                 <p class="govuk-body">Selecting this offence could impact your release dates calcuation.</p>
                 {{ govukRadios({
                     name: "confirmOffence",
