--- a/server/views/pages/offence/offence-name.njk
+++ b/server/views/pages/offence/offence-name.njk
@@ -34,7 +34,7 @@
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-name{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                         Continue
                     </button>
-
+                {% if featureToggles.saveDraftEnabled %}
                     <button type="submit"
                             class="govuk-button govuk-button--secondary"
                             data-module="govuk-button"
@@ -42,6 +42,7 @@
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
                         Save as draft
                     </button>
+                {% endif %}
                 </div>
             </form>
 
