--- a/server/views/pages/offence/terror-related.njk
+++ b/server/views/pages/offence/terror-related.njk
@@ -43,7 +43,7 @@
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-terror-related{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                         Continue
                     </button>
-
+                {% if featureToggles.saveDraftEnabled %}
                     <button type="submit"
                             class="govuk-button govuk-button--secondary"
                             data-module="govuk-button"
@@ -51,6 +51,7 @@
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
                         Save as draft
                     </button>
+                {% endif %}
                 </div>
             </form>
 {% endblock %}
