--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -80,13 +80,15 @@
                         Accept and continue
                     </button>
 
-                    <button type="submit"
-                            class="govuk-button govuk-button--secondary"
-                            data-module="govuk-button"
-                            data-qa="save-draft-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
-                        Save as draft
-                    </button>
+                    {% if featureToggles.saveDraftEnabled %}
+                        <button type="submit"
+                                class="govuk-button govuk-button--secondary"
+                                data-module="govuk-button"
+                                data-qa="save-draft-button"
+                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                            Save as draft
+                        </button>
+                    {% endif %}
                 </div>
             </form>
 
