RAS-768 Add feature toggle to Save As Draft buttons (#594)
* RAS-768 Add feature toggle to Save As Draft buttons

* RAS-768 Extend feature toggle check to all places that have Save Draft + add test

---------

Co-authored-by: Yasin Mustafa <yasin.mustafa@gmail.com>

--- a/server/views/pages/courtAppearance/next-hearing-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-select.njk
@@ -42,13 +42,15 @@
                         Continue
                     </button>
 
-                    <button type="submit"
-                            class="govuk-button govuk-button--secondary"
-                            data-module="govuk-button"
-                            data-qa="save-draft-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
-                        Save as draft
-                    </button>
+                    {% if featureToggles.saveDraftEnabled %}
+                        <button type="submit"
+                                class="govuk-button govuk-button--secondary"
+                                data-module="govuk-button"
+                                data-qa="save-draft-button"
+                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                            Save as draft
+                        </button>
+                    {% endif %}
                 </div>
             </form>
 
