--- a/server/views/pages/offence/terror-related.njk
+++ b/server/views/pages/offence/terror-related.njk
@@ -34,7 +34,6 @@
                     ]
                 }) }}
 
-
                 <div class="govuk-button-group">
                     <button type="submit"
                             class="govuk-button"
@@ -44,13 +43,15 @@
                         Continue
                     </button>
 
-                    <button type="submit"
-                            class="govuk-button govuk-button--secondary"
-                            data-module="govuk-button"
-                            data-qa="save-draft-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
-                        Save as draft
-                    </button>
+                    {% if featureToggles.saveDraftEnabled %}
+                        <button type="submit"
+                                class="govuk-button govuk-button--secondary"
+                                data-module="govuk-button"
+                                data-qa="save-draft-button"
+                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                            Save as draft
+                        </button>
+                    {% endif %}
                 </div>
             </form>
 {% endblock %}
