Fix to spelling of the word appearance

--- a/server/views/pages/offence/sentence-length-mismatch.njk
+++ b/server/views/pages/offence/sentence-length-mismatch.njk
@@ -13,7 +13,7 @@
             Sentence length mismatch
         </h1>
         
-        <p class="govuk-body">The total sentence length of the offences added for this appearace do not match the overall sentence length entered from the warrant.</p>
+        <p class="govuk-body">The total sentence length of the offences added for this appearance do not match the overall sentence length entered from the warrant.</p>
         
         <form method="post"
             action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/submit-sentence-length-mismatch">
