RASS-791 appearance content change

--- a/server/views/pages/courtAppearance/task-list.njk
+++ b/server/views/pages/courtAppearance/task-list.njk
@@ -11,7 +11,7 @@
                 {% if isAddCourtCase %}
                     Add a court case
                 {% else %}
-                    Add an appearance
+                    Add a court appearance
                 {% endif %}
             </h1>
             <h2 class="govuk-heading-m">
