--- a/server/views/pages/courtAppearance/warrant-type.njk
+++ b/server/views/pages/courtAppearance/warrant-type.njk
@@ -13,7 +13,7 @@
                     {% if addOrEditCourtCase === "add" %}
                         Add a court case
                     {% else %}
-                        Add an appearance
+                        Add a court appearance
                     {% endif %}
                 </span>
                 {{ govukRadios({
